[package]
name = "cosmogram"
version = "0.1.0"
edition = "2024"

[lib]
name = "cosmogram"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module", "python"]
python = ["pyo3", "pyo3-stub-gen"]

[[bin]]
name = "stub_gen"
path = "src/bin/py_stubs.rs"

[dependencies]

bytemuck = { version = "1.25.0", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
reqwest = { version = "0.13.2", features = ["stream", "blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.1.9"
chrono = "0.4.44"
postcard = { version = "1.1.3", features = ["alloc"] }
rayon = "1.11.0"
num_enum = "0.7.6"
nohash-hasher = "0.2.0"
indicatif = "0.18.4"
zstd = "0.13.3"
json-strip-comments = "3.1.0"

pyo3 = { version = "0.28.3", optional = true }
pyo3-stub-gen = { version = "0.22.0", optional = true }
dashmap = "7.0.0-rc2"
deepsize = "0.2.0"
unicode-normalization = "0.1.25"
unicode-general-category = "1.1.0"
unicode-casefold = "0.2.0"